@@ -1,4 +1,5 @@
 v1.0.4(2024.XX.XX)
+- Update settings to modern format
 
 v1.0.3(2024.04.11)
 - Update Basic Auth
